# my-web-ring

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
migrations/2025-03-06-065808_create_sources/: down.sql  up.sql
migrations/2025-03-07-223222_create_pages/: down.sql  up.sql
migrations/2025-04-19-224130_source_title/: down.sql  up.sql
src/: backups.rs  crud.rs  http.rs  lib.rs  logger.rs  main.rs  models.rs  schema.rs
