[package]
name = "mwr"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", default-features = false, features = ["clock", "alloc", "std", "now"] }
clap = { version = "4.5.31", features = ["derive"] }
diesel = { version = "2.2.8", features = [
    "returning_clauses_for_sqlite_3_35",
    "sqlite",
    "chrono",
    "r2d2",
] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
directories = "6.0.0"
log = { version = "0.4.26", features = ["std"] }
rand = "0.9.0"
rss = "2.0.12"
ureq = "3.0.8"
webbrowser = "1.0.4"
